# quant_demo

./: .gitignore  README.md
sources/: CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
sources/common/event/: normalized_event.cpp  normalized_event.hpp
sources/common/exchange/: exchange_params.hpp
sources/core/algorithm/: ac.cpp  ac.hpp  sor.cpp  sor.hpp  vwap.cpp  vwap.hpp
sources/core/error_handling/: error_handling.cpp  error_handling.hpp
sources/core/interface/: connector.hpp  handler.hpp  notifier.hpp  serializer.hpp  session.hpp
sources/core/log/: log.cpp  log.hpp
sources/engine/: pipeline.cpp  pipeline.hpp
sources/exchange/binance/: connector.cpp  connector.hpp  handler.cpp  handler.hpp  info.hpp  notifier.hpp  serializer.cpp  serializer.hpp
sources/network/websockets/: session.cpp  session.hpp  websocket.cpp  websocket.hpp
